--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,14 +57,14 @@ $body-color                 : #fff;
 $background-color           : #fff;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
+$text-color                 : #0f0f0f;
 $border-color               : $lighter-gray;
 
-$primary-color              : ##000000	;
+$primary-color              : #0f0f0f;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #800000	;
+$info-color                 : #eb4634	;
 
 /* brands */
 $behance-color              : #1769FF;
