--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,10 +61,10 @@ $text-color                 : #0f0f0f;
 $border-color               : $lighter-gray;
 
 $primary-color              : #0f0f0f;
-$success-color              : #62c462;
-$warning-color              : #f89406;
+$success-color              : #94618e;
+$warning-color              : #f4decb;
 $danger-color               : #ee5f5b;
-$info-color                 : #eb4634	;
+$info-color                 : #49274a	;
 
 /* brands */
 $behance-color              : #1769FF;
