--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,7 @@
    Typography
    ========================================================================== */
 
-$doc-font-size              : 16;
+$doc-font-size              : 12;
 
 /* paragraph indention */
 $paragraph-indent           : false; // true, false (default)
@@ -57,14 +57,15 @@ $body-color                 : #fff;
 $background-color           : #fff;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : #0f0f0f;
+$text-color                 : $dark-gray;
 $border-color               : $lighter-gray;
 
-$primary-color              : #0f0f0f;
-$success-color              : #94618e;
-$warning-color              : #f4decb;
+$primary-color              : #7a8288;
+$success-color              : #62c462;
+$warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #49274a	;
+$info-color                 : #52adc8;
+$info-color2                : #697a87;
 
 /* brands */
 $behance-color              : #1769FF;
@@ -90,7 +91,7 @@ $xing-color                 : #006567;
 
 
 /* links */
-$link-color                 : $info-color;
+$link-color                 : mix($info-color2, $info-color, 50%);
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
