--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,17 +54,17 @@ $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
 $body-color                 : #fff;
-$background-color           : #fff;
+$background-color           : #2a363b ;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
+$text-color                 : #99B898;
 $border-color               : $lighter-gray;
 
-$primary-color              : #7a8288;
+$primary-color              : #E84A5F;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #52adc8;
+$info-color                 : #FF847C;
 $info-color2                : #697a87;
 
 /* brands */
