--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,11 +54,11 @@ $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
 $body-color                 : #fff;
-$background-color           : #2a363b ;
-$code-background-color      : #fafafa;
-$code-background-color-dark : $light-gray;
-$text-color                 : #99B898;
-$border-color               : $lighter-gray;
+$background-color           : #E5FCC2;
+$code-background-color      : #E5FCC2;
+$code-background-color-dark : 9DE0AD;
+$text-color                 : #594F4F;
+$border-color               : #45ADA8;
 
 $primary-color              : #E84A5F;
 $success-color              : #62c462;
