--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -60,12 +60,12 @@ $code-background-color-dark : 9DE0AD;
 $text-color                 : #594F4F;
 $border-color               : #45ADA8;
 
-$primary-color              : #E84A5F;
-$success-color              : #62c462;
-$warning-color              : #f89406;
+$primary-color              : #45ADA8;
+$success-color              : #547980;
+$warning-color              : #547980;
 $danger-color               : #ee5f5b;
-$info-color                 : #FF847C;
-$info-color2                : #697a87;
+$info-color                 : #45ADA8;
+$info-color2                : #45ADA8;
 
 /* brands */
 $behance-color              : #1769FF;
