--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -53,19 +53,19 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #fff;
-$background-color           : #E5FCC2;
-$code-background-color      : #E5FCC2;
-$code-background-color-dark : 9DE0AD;
-$text-color                 : #594F4F;
-$border-color               : #45ADA8;
+$body-color                 : #E8EAE3;
+$background-color           : #E8EAE3;
+$code-background-color      : #E8EAE3;
+$code-background-color-dark : #373833;
+$text-color                 : #373833;
+$border-color               : #FA2742;
 
-$primary-color              : #45ADA8;
-$success-color              : #547980;
-$warning-color              : #547980;
-$danger-color               : #ee5f5b;
-$info-color                 : #45ADA8;
-$info-color2                : #45ADA8;
+$primary-color              : #373833;
+$success-color              : #FA2742;
+$warning-color              : #FA2742;
+$danger-color               : #FA2742;
+$info-color                 : #FA2742;
+$info-color2                : #FA2742;
 
 /* brands */
 $behance-color              : #1769FF;
