--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,7 @@
    Typography
    ========================================================================== */
 
-$doc-font-size              : 12;
+$doc-font-size              : 10;
 
 /* paragraph indention */
 $paragraph-indent           : false; // true, false (default)
@@ -60,7 +60,7 @@ $code-background-color-dark : #373833;
 $text-color                 : #373833;
 $border-color               : #FA2742;
 
-$primary-color              : #373833;
+$primary-color              : #FA2742;
 $success-color              : #FA2742;
 $warning-color              : #FA2742;
 $danger-color               : #FA2742;
