--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,15 +57,15 @@ $body-color                 : #E8EAE3;
 $background-color           : #E8EAE3;
 $code-background-color      : #E8EAE3;
 $code-background-color-dark : #373833;
-$text-color                 : #373833;
-$border-color               : #FA2742;
+$text-color                 : #425664;
+$border-color               : #425664;
 
-$primary-color              : #FA2742;
-$success-color              : #FA2742;
-$warning-color              : #FA2742;
-$danger-color               : #FA2742;
-$info-color                 : #FA2742;
-$info-color2                : #FA2742;
+$primary-color              : #C6AD8F;
+$success-color              : #C6AD8F;
+$warning-color              : #C6AD8F;
+$danger-color               : #C6AD8F;
+$info-color                 : #C6AD8F;
+$info-color2                : #C6AD8F;
 
 /* brands */
 $behance-color              : #1769FF;
