--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -53,19 +53,19 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #E8EAE3;
-$background-color           : #E8EAE3;
-$code-background-color      : #E8EAE3;
-$code-background-color-dark : #373833;
-$text-color                 : #425664;
-$border-color               : #425664;
+$body-color                 : #FFFFFE;
+$background-color           : #FFFFFE;
+$code-background-color      : #FFFFFE;
+$code-background-color-dark : #FFFFFE;
+$text-color                 : #531319;
+$border-color               : #531319;
 
-$primary-color              : #C6AD8F;
-$success-color              : #C6AD8F;
-$warning-color              : #C6AD8F;
-$danger-color               : #C6AD8F;
-$info-color                 : #C6AD8F;
-$info-color2                : #C6AD8F;
+$primary-color              : #8B2030;
+$success-color              : #8B2030;
+$warning-color              : #8B2030;
+$danger-color               : #FE4C6F;
+$info-color                 : #FE4C6F;
+$info-color2                : #FE4C6F;
 
 /* brands */
 $behance-color              : #1769FF;
