--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -58,13 +58,13 @@ $background-color           : #FFFFFE;
 $code-background-color      : #FFFFFE;
 $code-background-color-dark : #FFFFFE;
 $text-color                 : #531319;
-$border-color               : #531319;
+$border-color               : #8B2030;
 
 $primary-color              : #8B2030;
 $success-color              : #8B2030;
 $warning-color              : #8B2030;
 $danger-color               : #FE4C6F;
-$info-color                 : #FE4C6F;
+$info-color                 : #8B2030;
 $info-color2                : #FE4C6F;
 
 /* brands */
