--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -66,8 +66,8 @@ $primary-color              : #557373;
 $success-color              : #dfe5f3;
 $warning-color              : #dfe5f3;
 $danger-color               : #dfe5f3;
-$info-color                 : #557373;
-$info-color2                : #557373;
+$info-color                 : #f2efea;
+$info-color2                : #f2efea;
 
 /* brands */
 $behance-color              : #1769FF;
